# SecureSystemsEngineering_CS6570

./: .gitignore
a1/lab1_1/: Makefile  get_exp.py  lab1_1  lab1_1.c  notes
a1/lab1_2/: get_exp.py  notes
a2/: brute.py  change_i.py  gen_input.py  notes  part_a.py
a2_submission/: README.md  part_a.py  part_b.py  part_b_caesar.py  part_b_loop.py
a3/p1/: brute_test_addresses.py  connect.py  final.py  notes  problem1.py  shell.py  stack_dump.py  test_substr_addrs.py  test_substrs.py
a3/p2/: make_str.py  problem2.py
a4/: users  users.c  users2_mod.c
a4/p1/: exploit_generator.py  notes.txt  run_p1.sh  users.c
a4/p2/: p2.py
a5/: 128bytes.py  1736bytes.py  CMakeLists.txt  README  hash_executer.c  hash_generator.c  hidden_functions.h  main.c
a6/3/: 3  3_p  3_p2  64_p  Readme - Normal User.txt
a6/64/: 64  64_p  readmeUser.txt
a6/66/: 66  66_p2  READ_ME(User_version).me  func66.py  func_66.cc
a6/84/: 84  README  a.out  pass  repack
a6/85/: 85  85.lst  README.txt
a6/93/: 93  README_NormalUser.md
a6/mine_34/: 34  README.md
